force-app/main/default/objects/VN_Sumarizador__c/VN_Sumarizador__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por sumarizar as metas, resultados e ponderados das informações carregas ou atualizadas.</description>
    <label>Sumarizador</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Código do Sumarizador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sumarizadores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>