force-app/main/default/objects/VN_Sumarizador__c/fields/Participante__c.field-meta.xml
<CustomField>
    <fullName>Participante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento entre o participante e o sumarizador para poder gerar a pontuação</description>
    <label>Participante</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Sumarizadores</relationshipLabel>
    <relationshipName>Sumarizadores</relationshipName>
    <type>Lookup</type>
</CustomField>