force-app/main/default/objects/VN_Sumarizador__c/fields/V_AMYTDAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_AMYTDAnterior__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo que recebe o valor do percentual % AM YTD do mês anterior</description>
    <inlineHelpText>Campo que recebe o valor do percentual % AM YTD do mês anterior</inlineHelpText>
    <label>% AM YTD Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>