force-app/main/default/objects/VN_Sumarizador__c/fields/V_Area__c.field-meta.xml
<CustomField>
    <fullName>V_Area__c</fullName>
    <label>Área</label>
    <length>255</length>
    <type>Text</type>
</CustomField>