force-app/main/default/objects/VN_Sumarizador__c/fields/V_Cargo__c.field-meta.xml
<CustomField>
    <fullName>V_Cargo__c</fullName>
    <label>Cargo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>