force-app/main/default/objects/VN_Sumarizador__c/fields/V_IDXAnoFiscal__c.field-meta.xml
<CustomField>
    <fullName>V_IDXAnoFiscal__c</fullName>
    <label>IDX Ano Fiscal</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>