force-app/main/default/objects/VN_Sumarizador__c/fields/V_IDXAnoFiscalPeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_IDXAnoFiscalPeriodo__c</fullName>
    <formula>CASE(V_IDXAnoFiscal__c, 
 0, 0, 
 1, 1,
 V_MesFYAnterior__c, V_IDXAnoFiscalPeriodoAnterior__c,
 IF( V_Ponderou__c =FALSE,1+ V_IDXAnoFiscalPeriodoAnterior__c ,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDX Ano Fiscal Período</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>