force-app/main/default/objects/VN_Sumarizador__c/fields/V_IDXAnoFiscalPeriodoAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_IDXAnoFiscalPeriodoAnterior__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IDX Ano Fiscal Período Anterior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>