force-app/main/default/objects/VN_Sumarizador__c/fields/V_IDXSemestrePeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_IDXSemestrePeriodo__c</fullName>
    <formula>IF( V_IDXSemestre__c =0,0,
   IF( V_IDXSemestre__c =1,1,
      IF( V_IDXSemestre__c = V_IDXSemestreAnterior__c , V_IDXSemestrePeriodoAnterior__c ,
         IF( V_Ponderou__c = FALSE,1 + V_IDXSemestrePeriodoAnterior__c ,1))))</formula>
    <label>IDX Semestre Período</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>