force-app/main/default/objects/VN_Sumarizador__c/fields/V_IDXSemestrePeriodoAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_IDXSemestrePeriodoAnterior__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IDX Semestre Período Anterior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>