force-app/main/default/objects/VN_Sumarizador__c/fields/V_IDXTrimestrePeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_IDXTrimestrePeriodo__c</fullName>
    <formula>IF( V_IDXTrimestre__c =0,0,
   IF( V_IDXTrimestre__c =1,1,
      IF( V_IDXTrimestre__c = V_IDXTrimestreAnterior__c , V_IDXTrimestrePeriodoAnterior__c ,
         IF( V_Ponderou__c =FALSE,1 + V_IDXTrimestrePeriodoAnterior__c ,1 ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDX Trimestre Período</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>