force-app/main/default/objects/VN_Sumarizador__c/fields/V_IDXTrimestrePeriodoAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_IDXTrimestrePeriodoAnterior__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IDX Trimestre Período Anterior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>