force-app/main/default/objects/VN_Sumarizador__c/fields/V_Lideranca__c.field-meta.xml
<CustomField>
    <fullName>V_Lideranca__c</fullName>
    <label>Liderança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>