force-app/main/default/objects/VN_Sumarizador__c/fields/V_LiderImediato__c.field-meta.xml
<CustomField>
    <fullName>V_LiderImediato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Líder Imediato</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Sumarizadores (Lider Imediato)</relationshipLabel>
    <relationshipName>LiderImediatoSumarizadores</relationshipName>
    <type>Lookup</type>
</CustomField>