force-app/main/default/objects/VN_Sumarizador__c/fields/V_Mes__c.field-meta.xml
<CustomField>
    <fullName>V_Mes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Faz referência ao mês corrente da meta</description>
    <label>Mês Meta</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>