force-app/main/default/objects/VN_Sumarizador__c/fields/V_MesFYAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_MesFYAnterior__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IDX Ano fiscal Anterior</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>