force-app/main/default/objects/VN_Sumarizador__c/fields/V_MesString__c.field-meta.xml
<CustomField>
    <fullName>V_MesString__c</fullName>
    <formula>CASE( MCEILING(V_Mes__c) ,
10, &quot;Janeiro&quot;,
11, &quot;Fevereiro&quot;,
12, &quot;Março&quot;,
1, &quot;Abril&quot;,
2, &quot;Maio&quot;,
3, &quot;Junho&quot;,
4, &quot;Julho&quot;,
5, &quot;Agosto&quot;,
6, &quot;Setembro&quot;,
7, &quot;Outubro&quot;,
8, &quot;Novembro&quot;,
9, &quot;Dezembro&quot;,
&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês String</label>
    <type>Text</type>
</CustomField>