force-app/main/default/objects/VN_Sumarizador__c/fields/V_Meta__c.field-meta.xml
<CustomField>
    <fullName>V_Meta__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Meta Mensal, sumarização da meta da carga por participante</description>
    <inlineHelpText>Faz referência a Meta mensal do Participante.</inlineHelpText>
    <label>Meta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>