force-app/main/default/objects/VN_Sumarizador__c/fields/V_MetaDoParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_MetaDoParticipante__c</fullName>
    <description>Meta dos participantes</description>
    <label>Meta do Participante</label>
    <referenceTo>VN_MetaParticipante__c</referenceTo>
    <relationshipName>VN_SumarizadoresDosObjetivos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>