force-app/main/default/objects/VN_Sumarizador__c/fields/V_MetaYTD__c.field-meta.xml
<CustomField>
    <fullName>V_MetaYTD__c</fullName>
    <formula>V_MetaYTDAnterior__c +  V_Meta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meta YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>