force-app/main/default/objects/VN_Sumarizador__c/fields/V_MetaYTDSemestre__c.field-meta.xml
<CustomField>
    <fullName>V_MetaYTDSemestre__c</fullName>
    <formula>IF(AND( V_IDXSemestre__c != V_IDXSemestreAnterior__c, V_IDXSemestre__c =1), V_Meta__c ,
IF( V_IDXSemestre__c = V_IDXSemestreAnterior__c, V_MetaYTDSemestreAnterior__c ,
 V_MetaYTDSemestreAnterior__c + V_Meta__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meta YTD Semestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>