force-app/main/default/objects/VN_Sumarizador__c/fields/V_MetaYTDSemestrePeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_MetaYTDSemestrePeriodo__c</fullName>
    <formula>IF( V_IDXSemestre__c =0,0,
   IF( V_IDXSemestre__c =1, V_MetaYTDSemestre__c ,
      IF( V_IDXSemestre__c = V_IDXSemestreAnterior__c , V_MetaYTDSemestrePeriodoAnterior__c ,
         IF( V_IDXSemestrePeriodo__c =1, V_MetaYTDSemestre__c - V_MetaYTDSemestreAnterior__c , V_MetaYTDSemestrePeriodoAnterior__c + V_Meta__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meta YTD Semestre Período</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>