force-app/main/default/objects/VN_Sumarizador__c/fields/V_MetaYTDSemestrePeriodoAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_MetaYTDSemestrePeriodoAnterior__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meta YTD Semestre Período Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>