force-app/main/default/objects/VN_Sumarizador__c/fields/V_MetaYTDTrimestre__c.field-meta.xml
<CustomField>
    <fullName>V_MetaYTDTrimestre__c</fullName>
    <formula>IF(AND( V_IDXTrimestre__c  != V_IDXTrimestreAnterior__c , V_IDXTrimestre__c &lt;=1), V_Meta__c ,
   IF( V_IDXTrimestre__c = V_IDXTrimestreAnterior__c , V_MetaYTDTrimestreAnterior__c ,
 V_MetaYTDTrimestreAnterior__c + V_Meta__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meta YTD Trimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>