force-app/main/default/objects/VN_Sumarizador__c/fields/V_MetaYTDTrimestrePeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_MetaYTDTrimestrePeriodo__c</fullName>
    <formula>IF( V_IDXTrimestre__c =0,0,
   IF( V_IDXTrimestre__c =1, V_MetaYTDTrimestre__c ,
      IF( V_IDXTrimestre__c = V_IDXTrimestreAnterior__c , V_MetaYTDTrimestrePeriodoAnterior__c ,
         IF( V_IDXTrimestrePeriodo__c =1, V_MetaYTDTrimestre__c - V_MetaYTDTrimestreAnterior__c , V_MetaYTDTrimestrePeriodoAnterior__c + V_Meta__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meta YTD Trimestre Período</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>