force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercAMLiderImediatoQuarter__c.field-meta.xml
<CustomField>
    <fullName>V_PercAMLiderImediatoQuarter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Apresenta o valor atingido pelo líder no quarter, onde a meta (mínimo) é igual a 100%.</description>
    <inlineHelpText>Valor atingido pelo líder no quarter.</inlineHelpText>
    <label>% AM do Líder Imediato Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>