force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMMes__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMMes__c</fullName>
    <description>Apresenta o percentual de atingimento da meta pelo participante</description>
    <formula>IF ( V_Meta__c &lt;= 0,0,V_Valor__c  /  V_Meta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Apresenta o percentual de atingimento da meta.</inlineHelpText>
    <label>% AM Mês</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>