force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMYTD__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMYTD__c</fullName>
    <formula>IF(V_IDXAnoFiscal__c&lt;=0,0,(( V_PercentualAMYTDPeriodo__c * V_IDXAnoFiscalPeriodo__c )+ V_PercentualAMYTDFatorado__c )/ V_IDXAnoFiscal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% AM YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>