force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMYTDPeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMYTDPeriodo__c</fullName>
    <formula>IF( V_MetaYTDPeriodo__c &lt;=0,0,  V_ValorYTDPeriodoFinal__c  / V_MetaYTDPeriodo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% AM YTD Período</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>