force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMYTDPeriodoAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMYTDPeriodoAnterior__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% AM YTD Período Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>