force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMYTDSemestre__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMYTDSemestre__c</fullName>
    <formula>IF(V_IDXSemestre__c &lt;=0,0,(( V_PercentualAMYTDSemestrePeriodo__c * V_IDXSemestrePeriodo__c )+ V_PercentualAMYTDSemestreFatorado__c )/ V_IDXSemestre__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% AM YTD Semestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>