force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMYTDSemestreFatorado__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMYTDSemestreFatorado__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% AM YTD Semestre Fatorado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>