force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMYTDSemestrePeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMYTDSemestrePeriodo__c</fullName>
    <formula>IF( V_MetaYTDSemestrePeriodo__c &lt;=0,0, V_ValorYTDSemestrePeriodo__c  /  V_MetaYTDSemestrePeriodo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% AM YTD Semestre Período</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>