force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMYTDTrimestre__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMYTDTrimestre__c</fullName>
    <formula>IF(V_IDXTrimestre__c &lt;=0 ,0, (( V_PercentualAMYTDTrimestrePeriodo__c * V_IDXTrimestrePeriodo__c )+ V_PercentualAMYTDTrimestreFatorado__c )/ V_IDXTrimestre__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% AM YTD Trimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>