force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMYTDTrimestreFatorado__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMYTDTrimestreFatorado__c</fullName>
    <formula>IF( V_IDXTrimestre__c &lt;=1,0,
   IF(AND( V_IDXTrimestre__c = V_IDXTrimestreAnterior__c , V_IDXTrimestrePeriodo__c = V_IDXTrimestrePeriodoAnterior__c ), V_PercentuAMYTDTrimestreFatoradoAnterior__c ,
      IF(AND( V_IDXTrimestre__c = V_IDXTrimestreAnterior__c , V_IDXTrimestrePeriodo__c =1), (V_PercentuaAMYTDTrimestrePeriodoAnterior__c * V_IDXTrimestrePeriodoAnterior__c) + V_PercentuAMYTDTrimestreFatoradoAnterior__c ,
         IF( V_IDXTrimestrePeriodo__c =1, (V_PercentuaAMYTDTrimestrePeriodoAnterior__c * V_IDXTrimestrePeriodoAnterior__c) + V_PercentuAMYTDTrimestreFatoradoAnterior__c , V_PercentuAMYTDTrimestreFatoradoAnterior__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% AM YTD Trimestre Fatorado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>