force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualAMYTDTrimestrePeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMYTDTrimestrePeriodo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% AM YTD Trimestre Período</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>