force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualSEMes__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualSEMes__c</fullName>
    <formula>IF(V_Valor__c &lt;=0,0,V_ResultadoSE__c / V_Valor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% SE Mês</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>