force-app/main/default/objects/VN_Sumarizador__c/fields/V_PercentualSEMesArred__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualSEMesArred__c</fullName>
    <description>Arredonda o valor do campo &quot;% SE Mês&quot; para o menor número inteiro mais próximo, a fim de ser utilizado na regra de pontuação Soluções Estratégicas.</description>
    <formula>FLOOR(V_PercentualSEMes__c * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% SE Mês (Arred.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>