force-app/main/default/objects/VN_Sumarizador__c/fields/V_Persona__c.field-meta.xml
<CustomField>
    <fullName>V_Persona__c</fullName>
    <formula>IF(V_PercentualAMYTD__c &gt;= 1, &apos;UP&apos;, &apos;DOWN&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Persona</label>
    <type>Text</type>
</CustomField>