force-app/main/default/objects/VN_Sumarizador__c/fields/V_Ponderou__c.field-meta.xml
<CustomField>
    <fullName>V_Ponderou__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que apresenta se o participante teve ponderação ou não.</description>
    <inlineHelpText>Flag que apresenta se o participante teve ponderação ou não.</inlineHelpText>
    <label>Ponderou</label>
    <type>Checkbox</type>
</CustomField>