force-app/main/default/objects/VN_Sumarizador__c/fields/V_ProcessarCalculos__c.field-meta.xml
<CustomField>
    <fullName>V_ProcessarCalculos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ao ser assinalado esse campo, os workflows de cálculo do registro serão acionados.</description>
    <inlineHelpText>Ao ser assinalado esse campo, os workflows de cálculo do registro serão acionados.</inlineHelpText>
    <label>Processar Cálculos</label>
    <type>Checkbox</type>
</CustomField>