force-app/main/default/objects/VN_Sumarizador__c/fields/V_ProcessarMecanicas__c.field-meta.xml
<CustomField>
    <fullName>V_ProcessarMecanicas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ao ser assinalado esse campo, as mecânicas de pontos do registro serão acionadas. Esse campo só pode ser assinalado se o campo &quot;Processar Cálculos&quot; já estiver assinalado.</description>
    <inlineHelpText>Ao ser assinalado esse campo, as mecânicas de pontos do registro serão acionadas. Esse campo só pode ser assinalado se o campo &quot;Processar Cálculos&quot; já estiver assinalado.</inlineHelpText>
    <label>Processar Mecânicas</label>
    <type>Checkbox</type>
</CustomField>