force-app/main/default/objects/VN_Sumarizador__c/fields/V_ReferenciaMesAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_ReferenciaMesAnterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que faz referência ao mês anterior do sumarizador.</description>
    <inlineHelpText>Faz referência ao registro do mês anterior no sumarizador.</inlineHelpText>
    <label>Referência ao Mês Anterior</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipName>VN_SumarizadoresDosObjetivos</relationshipName>
    <type>Lookup</type>
</CustomField>