force-app/main/default/objects/VN_Sumarizador__c/fields/V_ResultadoSE__c.field-meta.xml
<CustomField>
    <fullName>V_ResultadoSE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Resultado SE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>