force-app/main/default/objects/VN_Sumarizador__c/fields/V_ScoreAMYTD__c.field-meta.xml
<CustomField>
    <fullName>V_ScoreAMYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indica o score Elite de atingimento de meta do participante.</description>
    <inlineHelpText>Indica o score Elite de atingimento de meta do participante.</inlineHelpText>
    <label>Score Atingimento Meta YTD</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>