force-app/main/default/objects/VN_Sumarizador__c/fields/V_ScoreSMEliteQ1Consolidado__c.field-meta.xml
<CustomField>
    <fullName>V_ScoreSMEliteQ1Consolidado__c</fullName>
    <description>Campo indica o valor do Score de Superação Q1	consolidado, após os cálculos realizados no mês 1,2 e 3</description>
    <formula>V_MetaDoParticipante__r.V_ScoreSuperacaoQ1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score SM Elite Q1 Consolidado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>