force-app/main/default/objects/VN_Sumarizador__c/fields/V_ScoreSMQ1__c.field-meta.xml
<CustomField>
    <fullName>V_ScoreSMQ1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indica o score Elite de superação de meta Q1  do participante.</description>
    <inlineHelpText>Indica o score Elite de superação de meta Q1  do participante.</inlineHelpText>
    <label>Score SM Elite Q1</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>