force-app/main/default/objects/VN_Sumarizador__c/fields/V_ScoreSMYTD__c.field-meta.xml
<CustomField>
    <fullName>V_ScoreSMYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indica o score Elite de superação de meta do participante.</description>
    <inlineHelpText>Indica o score Elite de superação de meta do participante.</inlineHelpText>
    <label>Score Superação Meta YTD</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>