force-app/main/default/objects/VN_Sumarizador__c/fields/V_Setor__c.field-meta.xml
<CustomField>
    <fullName>V_Setor__c</fullName>
    <label>Setor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>