force-app/main/default/objects/VN_Sumarizador__c/fields/V_Sumarizador__c.field-meta.xml
<CustomField>
    <fullName>V_Sumarizador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sumarizador</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Sumarizadores (Sumarizador)</relationshipLabel>
    <relationshipName>Sumarizadores</relationshipName>
    <type>Lookup</type>
</CustomField>