force-app/main/default/objects/VN_Sumarizador__c/fields/V_Valor__c.field-meta.xml
<CustomField>
    <fullName>V_Valor__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sumarizador que faz referência ao resultado atingido pelo participante</description>
    <inlineHelpText>Faz referência ao resultado atingido pelo participante</inlineHelpText>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>