force-app/main/default/objects/VN_Sumarizador__c/fields/V_ValorDisputaComercial__c.field-meta.xml
<CustomField>
    <fullName>V_ValorDisputaComercial__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo populado via carga.</description>
    <label>Valor Disputa Comercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>