force-app/main/default/objects/VN_Sumarizador__c/fields/V_ValorYTD__c.field-meta.xml
<CustomField>
    <fullName>V_ValorYTD__c</fullName>
    <formula>V_ValorYTDAnterior__c +   V_Valor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>