force-app/main/default/objects/VN_Sumarizador__c/fields/V_ValorYTDPeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_ValorYTDPeriodo__c</fullName>
    <formula>IF( V_IDXAnoFiscal__c =0,0,
   IF( V_IDXAnoFiscal__c =1, V_ValorYTD__c ,
      IF(AND( V_IDXAnoFiscal__c = V_MesFYAnterior__c , V_IDXAnoFiscalPeriodo__c = V_IDXAnoFiscalPeriodoAnterior__c ), V_ValorYTDPeriodoAnterior__c ,
        IF( V_IDXAnoFiscalPeriodo__c =1, V_ValorYTD__c - V_ValorYTDAnterior__c , V_ValorYTDPeriodoAnterior__c + V_Valor__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor YTD Período</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>