force-app/main/default/objects/VN_Sumarizador__c/fields/V_ValorYTDPeriodoFinal__c.field-meta.xml
<CustomField>
    <fullName>V_ValorYTDPeriodoFinal__c</fullName>
    <formula>IF(  
   V_Mes__c = 12,  V_ValorYTDPeriodo__c -  V_ValorDisputaComercial__c, V_ValorYTDPeriodo__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor YTD Período Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>