force-app/main/default/objects/VN_Sumarizador__c/fields/V_ValorYTDSemestre__c.field-meta.xml
<CustomField>
    <fullName>V_ValorYTDSemestre__c</fullName>
    <formula>IF(AND( V_IDXSemestre__c != V_IDXSemestreAnterior__c , V_IDXSemestre__c =1), V_Valor__c,
   IF( V_IDXSemestre__c = V_IDXSemestreAnterior__c , V_ValorYTDSemestreAnterior__c ,
 V_ValorYTDSemestreAnterior__c  +  V_Valor__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor YTD Semestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>