force-app/main/default/objects/VN_Sumarizador__c/fields/V_ValorYTDSemestrePeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_ValorYTDSemestrePeriodo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor YTD Semestre Período</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>