force-app/main/default/objects/VN_Sumarizador__c/fields/V_ValorYTDTrimestre__c.field-meta.xml
<CustomField>
    <fullName>V_ValorYTDTrimestre__c</fullName>
    <formula>IF(AND( V_IDXTrimestre__c != V_IDXTrimestreAnterior__c , V_IDXTrimestre__c &lt;=1), V_Valor__c ,
   IF( V_IDXTrimestre__c = V_IDXTrimestreAnterior__c , V_ValorYTDTrimestreAnterior__c ,
 V_ValorYTDTrimestreAnterior__c + V_Valor__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor YTD Trimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>