force-app/main/default/objects/VN_Sumarizador__c/fields/V_ValorYTDTrimestreAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_ValorYTDTrimestreAnterior__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor YTD Trimestre Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>