force-app/main/default/objects/VN_Sumarizador__c/fields/V_ValorYTDTrimestrePeriodo__c.field-meta.xml
<CustomField>
    <fullName>V_ValorYTDTrimestrePeriodo__c</fullName>
    <formula>IF( V_IDXTrimestre__c =0,0,
   IF( V_IDXTrimestre__c =1, V_ValorYTDTrimestre__c ,
      IF( V_IDXTrimestre__c = V_IDXTrimestreAnterior__c , V_ValorYTDTrimestrePeriodoAnterior__c ,
         IF( V_IDXTrimestrePeriodo__c =1, V_ValorYTDTrimestre__c - V_ValorYTDTrimestreAnterior__c , V_ValorYTDTrimestrePeriodoAnterior__c + V_Valor__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor YTD Trimestre Período</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>